# patience-game-haskell

./: .gitignore  README.md  patience.cabal  stack.yaml    wq
lib/: .BoardLogica.hs.swp  .Types.hs.swp  BoardLogica.hs  Cards.hs  GameLogica.hs  PatienceLogica.hs  SelectorLogica.hs  Types.hs  VoorbeeldModule.hs
src/: Main.hs
test/: VoorbeeldTest.hs
